# Robot_Arm

./: .gitignore  README.md  pyproject.toml
notebook/: create_trajectories.py  models.md  robot_arm.ipynb  train_ode_net.py  trajectories.md
notebook/data/models/: model_adjoint_v25.pth  model_adjoint_v26.pth  model_adjoint_v27.pth  model_adjoint_v28.pth  model_adjoint_v33.pth  model_adjoint_v35.pth
notebook/data/training/: model_adjoint_eval_losses_v25.txt  model_adjoint_eval_losses_v26.txt  model_adjoint_eval_losses_v27.txt  model_adjoint_eval_losses_v28.txt  model_adjoint_eval_losses_v33.txt  model_adjoint_eval_losses_v35.txt  model_adjoint_training_losses_v25.txt  model_adjoint_training_losses_v26.txt  model_adjoint_training_losses_v27.txt  model_adjoint_training_losses_v28.txt  model_adjoint_training_losses_v33.txt  model_adjoint_training_losses_v35.txt
notebook/data/trajectories/: pert_trajectories_v20.npz  pert_trajectories_v41.npz  trajectories_v12.npz  trajectories_v20.npz  trajectories_v30.npz  trajectories_v40.npz  trajectories_v41.npz
robot/: analysis.py  ode_net.py  robot_arm.py  utils.py  visualize.py
